--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -3,6 +3,20 @@
   font-display: swap;
   src: url(../fonts/IBMPlexSansArabic-Regular.ttf);
 }
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "IBMPlexSansArabic", Sans-serif;
+}
 * {
   font-family: "IBMPlexSansArabic", Sans-serif;
   box-sizing: border-box;
@@ -10,4 +24,36 @@
   padding: 0;
   outline: none;
   scroll-behavior: smooth;
+}
+
+@media (max-width: 991.98px) {
+  .ecommerce-navbar .navbar-collapse {
+    padding: 48px 8px;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 6px;
+  // background-color: #eee;
+  border-radius: 0px !important;
+}
+::-webkit-scrollbar-track {
+  border-radius: 0px !important;
+  background: #f3f3f3;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #c7c7c7;
+  outline: none;
+  border-radius: 20px !important;
+}
+:target {
+  scroll-margin-top: 50px;
+}
+
+.navbar .navbar-brand {
+  img {
+    height: 35px;
+    object-fit: contain;
+  }
 }
