--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -144,12 +144,47 @@ h6 {
   object-fit: contain;
 }
 
-.blog{
-  .card{
+.blog {
+  .card {
     height: 100%;
-    .img-fluid{
+    .img-fluid {
       aspect-ratio: 3/2;
       object-fit: cover;
     }
+  }
+}
+
+.recruitmentRequest {
+  .productBanner {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    aspect-ratio: 3/2;
+   img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -2;
+   }
+    .product-content{
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+        background-color: #000;
+        opacity: .4;
+        z-index: -1;
+      }
+    }
+   
   }
 }
