--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -181,6 +181,8 @@ h6 {
   }
 }
 .bestCompanies {
+  background-image: linear-gradient(#4972b720, #4972b720),
+  url(https://weblearnbd.net/tphtml/insurez/assets/img/features/features.jpg)  ;
   .gallery-product {
     img {
       width: 100%;
