--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -70,6 +70,9 @@ h6 {
 #ecommerceHero {
   .mainData {
     width: min(100% - 24px, 600px);
+    @media screen and (max-width: 768px) {
+      text-align: center;
+    }
   }
   .ecommerce-home {
     position: relative;
