--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -345,3 +345,12 @@ h6 {
 .password-addon {
   height: 100%;
 }
+
+.breadcrumb-item.active{
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.breadcrumb-item + .breadcrumb-item::before{
+  padding: 0;
+}
