--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -185,7 +185,7 @@ h6 {
 }
 .bestCompanies {
   background-image: linear-gradient(#4972b720, #4972b720),
-  url(https://weblearnbd.net/tphtml/insurez/assets/img/features/features.jpg)  ;
+    url(https://weblearnbd.net/tphtml/insurez/assets/img/features/features.jpg);
   .gallery-product {
     img {
       width: 100%;
@@ -326,19 +326,19 @@ h6 {
 }
 .auth-page-wrapper {
   padding: 0px 0 80px;
-  .authLogo{
+  .authLogo {
     height: 140px;
     object-fit: contain;
     width: 100%;
     margin-bottom: 48px;
   }
 }
-.form-label{
+.form-label {
   font-weight: bold;
 }
-.form-control{
+.form-control {
   min-height: 54px;
-  &::placeholder{
+  &::placeholder {
     color: #777;
   }
 }
@@ -346,11 +346,23 @@ h6 {
   height: 100%;
 }
 
-.breadcrumb-item.active{
+.breadcrumb-item.active {
   display: flex;
   align-items: center;
   gap: 4px;
 }
-.breadcrumb-item + .breadcrumb-item::before{
+.breadcrumb-item + .breadcrumb-item::before {
   padding: 0;
+}
+
+.ribbon-box .ribbon {
+  z-index: 999;
+}
+
+.productSwiper2 {
+  img {
+    width: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
 }
