--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -206,6 +206,7 @@ h6 {
   color: #000;
   text-align: center;
   transition: 0.3s ease-in-out;
+
   img {
     height: 100px;
     width: 100px;
@@ -261,6 +262,7 @@ h6 {
     background-color: #4972b720;
     color: var(--mainColor);
     border-radius: 12px;
+    margin-top: auto;
   }
 
   &:hover {
@@ -364,5 +366,18 @@ h6 {
     width: 100%;
     aspect-ratio: 1/1;
     object-fit: cover;
+  }
+}
+
+.fancybox__container {
+  z-index: 1999;
+}
+.ribbon-box .trending-ribbon {
+  transform: translateX(-0);
+  display: flex !important;
+  align-items: baseline;
+  gap: 8px;
+  .trending-ribbon-text{
+    opacity: 1;
   }
 }
