--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -190,6 +190,7 @@ h6 {
     img {
       width: 100%;
       aspect-ratio: 1/1;
+      max-height: 130px;
       object-fit: contain;
       padding: 20px;
     }
