--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -377,7 +377,23 @@ h6 {
   display: flex !important;
   align-items: baseline;
   gap: 8px;
-  .trending-ribbon-text{
+  .trending-ribbon-text {
     opacity: 1;
+  }
+}
+
+.aboutImages {
+  img {
+    width: 100%;
+    aspect-ratio: 3/4;
+    object-fit: cover;
+    max-height: 300px;
+  }
+}
+
+.ecommerce-about-service {
+  img {
+    height: 100px;
+    object-fit: contain;
   }
 }
