--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -397,3 +397,14 @@ h6 {
     object-fit: contain;
   }
 }
+.table-sm>:not(caption)>*>* {
+  padding: 0.7rem 0.25rem;
+}
+.requests{
+  tr:last-child{
+    border-color: white;
+  }
+}
+.btn{
+  --tb-btn-padding-y: 0.4rem;
+}
