--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -30,6 +30,16 @@ h6 {
     padding: 48px 8px;
   }
 }
+$mainColor: #09463f;
+$secondColor: #dcb065;
+$gold: #ffd700;
+$white-color: #ffffff;
+$black-color: #292929;
+$body-color: #f3f3f9;
+$text-color: #777777;
+$transition: all 0.3s ease-in-out;
+$shadow: 0px 2px 4px #00000020;
+$BigShadow: 0px 8px 24px #00000020;
 ::-webkit-scrollbar {
   width: 8px;
   height: 6px;
@@ -397,14 +407,157 @@ h6 {
     object-fit: contain;
   }
 }
-.table-sm>:not(caption)>*>* {
+.table-sm > :not(caption) > * > * {
   padding: 0.7rem 0.25rem;
 }
-.requests{
-  tr:last-child{
+.requests {
+  tr:last-child {
     border-color: white;
   }
 }
-.btn{
+.btn {
   --tb-btn-padding-y: 0.4rem;
+}
+.selectCustomerService {
+  padding: 70px 0;
+  .headTitle {
+    p {
+      color: #777;
+      font-weight: bold;
+    }
+    h2 {
+      font-size: 36px !important;
+      font-weight: bold;
+      margin-bottom: 16px;
+    }
+  }
+  .choose {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    background-color: #c7d2d6;
+    padding: 20px;
+    border-radius: 10px;
+    .customerOption {
+      width: 100%;
+    }
+    .btn {
+      padding: 15px 20px;
+      // border: 1px solid #d2d6da;
+      // box-shadow: ;
+      box-shadow: none;
+      width: 96%;
+      background-color: $white-color;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      position: relative;
+      transition: $transition;
+      border: 4px solid transparent;
+      img {
+        height: 80px;
+        width: 80px;
+        margin: 0 auto 20px;
+        object-fit: contain;
+      }
+      span {
+        text-transform: capitalize;
+      }
+    }
+    .btn-check:active + .btn-outline,
+    .btn-check:checked + .btn-outline,
+    .btn-outline.active,
+    .btn-outline.dropdown-toggle.show,
+    .btn-outline:active {
+      background-color: $white-color;
+      color: $mainColor;
+      border: 4px solid $mainColor;
+      &::after {
+        content: "\f336" !important;
+        font-family: "Font Awesome 6 Pro";
+        font-weight: bold;
+        position: absolute;
+        font-size: 20px;
+        top: 5px;
+        right: 10px;
+      }
+    }
+  }
+}
+.contactCustomerService {
+  padding: 70px 0;
+  margin-top: 100px;
+}
+.selectedCustomer {
+  border-radius: 8px;
+  isolation: isolate;
+  padding: 20px;
+  background-color: $white-color;
+  box-shadow: $shadow;
+  margin: 10px 0;
+  text-align: center;
+  h6 {
+    line-height: 30px;
+    span {
+      font-weight: bold;
+      color: $mainColor;
+      padding: 0px 5px;
+    }
+  }
+}
+.selectedCustomerInfo {
+  .info {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: $shadow;
+    background: $white-color;
+    img {
+      height: 80px;
+      width: 80px;
+      margin: 0 20px;
+      object-fit: contain;
+    }
+    .text {
+      h5 {
+        font-weight: bold;
+        margin-bottom: 10px;
+        color: $mainColor;
+      }
+    }
+  }
+  .contact {
+    padding: 10px 20px;
+    background-color: $white-color;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: $shadow;
+    height: 100%;
+    text-align: center;
+    color: $black-color;
+    i {
+      font-size: 35px;
+      display: block;
+      margin-bottom: 10px;
+      &.fa-whatsapp-square {
+        color: #038735;
+      }
+      &.fa-square-phone {
+        color: #1e90ff;
+      }
+    }
+    &:hover {
+      background-color: $secondColor;
+      color: $mainColor;
+      // i {
+      //   color: $mainColor  !important;
+      // }
+    }
+  }
 }
