--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -513,7 +513,6 @@ $BigShadow: 0px 8px 24px #00000020;
     align-items: center;
     padding: 20px;
     border-radius: 8px;
-    
     img {
       height: 80px;
       width: 80px;
@@ -529,7 +528,7 @@ $BigShadow: 0px 8px 24px #00000020;
     }
   }
   .contact {
-    padding: 10px ;
+    padding: 10px;
     background-color: $white-color;
     border-radius: 8px;
     display: flex;
@@ -540,25 +539,35 @@ $BigShadow: 0px 8px 24px #00000020;
     height: 100%;
     text-align: center;
     color: $black-color;
-    p{
+    p {
       margin-bottom: 0;
     }
     i {
       font-size: 35px;
       display: block;
       margin-bottom: 10px;
-      
-      // &.fa-whatsapp-square {
-      //   color: #038735;
-      // }
-      // &.fa-square-phone {
-      //   color: #1e90ff;
-      // }
       color: #1e90ff;
     }
     &:hover {
       background-color: #f3f3f3;
       color: $mainColor;
+    }
+  }
+}
+.filter {
+  button {
+    width: 45px;
+    height: 45px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: #edf4ff;
+    color: $mainColor;
+    border-radius: 4px;
+    font-size: 14px;
+    @media (max-width: 567px) {
+      display: flex;
     }
   }
 }
