--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -555,19 +555,52 @@ $BigShadow: 0px 8px 24px #00000020;
   }
 }
 .filter {
+  padding-top: 40px;
   button {
-    width: 45px;
+    width: 100px;
     height: 45px;
     display: none;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     border: none;
     background-color: #edf4ff;
     color: $mainColor;
     border-radius: 4px;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 0 15px;
+    i{
+      font-size: 14px;
+    }
     @media (max-width: 567px) {
       display: flex;
     }
+  }
+}
+.close-sort {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  button {
+    width: 28px;
+    height: 28px;
+  }
+}
+@media (max-width: 576px) {
+  #sidebar {
+    overflow-y: scroll;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    z-index: 99999999;
+    transition: .5s ease-in-out;
+    &.show {
+      left: 0;
+    }
+  }
+  .card {
+    margin-bottom: 0;
   }
 }
