--- a/assets/css/custom.min.scss
+++ b/assets/css/custom.min.scss
@@ -569,7 +569,7 @@ $BigShadow: 0px 8px 24px #00000020;
     font-size: 16px;
     font-weight: 500;
     padding: 0 15px;
-    i{
+    i {
       font-size: 14px;
     }
     @media (max-width: 567px) {
@@ -585,6 +585,12 @@ $BigShadow: 0px 8px 24px #00000020;
     width: 28px;
     height: 28px;
   }
+}
+.open-filters {
+  position: fixed;
+  right: 16px;
+  bottom: 16px;
+  z-index: 99999;
 }
 @media (max-width: 576px) {
   #sidebar {
